--- a/components/MainPage/MainPage.scss
+++ b/components/MainPage/MainPage.scss
@@ -4,6 +4,7 @@
 
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    flex-grow: 1;
 }
 
 @media screen and (max-width: 900px) {
